[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
requests = "^2.31.0"
sqlalchemy = "^2.0.28"
pyshp = "^2.3.1"
shapely = "^2.0.3"
pyarrow = "^15.0.2"
fiona = "^1.9.6"
pyproj = "^3.6.1"
folium = "^0.16.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
pretty-errors = "^1.2.25"
plotly = "^5.20.0"
nbformat = "^5.10.3"
statsmodels = "^0.14.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
